apps/app1-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-nginx
  namespace: parcial-ceva
spec:
  replicas: 1
  selector:
    matchLabels: { app: app1-nginx }
  template:
    metadata:
      labels: { app: app1-nginx }
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app1-nginx
  namespace: parcial-ceva
spec:
  selector: { app: app1-nginx }
  ports:
    - port: 80
      targetPort: 80
---
