apps/app4-http-echo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app4-echo
  namespace: parcial-ceva
spec:
  replicas: 1
  selector:
    matchLabels: { app: app4-echo }
  template:
    metadata:
      labels: { app: app4-echo }
    spec:
      containers:
        - name: echo
          image: hashicorp/http-echo
          args:
            - "-text=Hola desde la App 4 (parcial-ceva)"
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: app4-echo
  namespace: parcial-ceva
spec:
  selector: { app: app4-echo }
  ports:
    - port: 80
      targetPort: 5678
---
